--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Website</title>
+    <title>Mattera</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
@@ -14,7 +14,7 @@
     <div class="nav-inner">
       <a href="#" class="nav-logo">
         <div class="nav-logo-badge">LG</div>
-        <span>NAAM</span>
+        <span>Mattera</span>
       </a>
 
       <ul class="nav-links">
@@ -24,7 +24,7 @@
         <li><a href="#docs">About</a></li>
       </ul>
 
-      <button class="nav-cta">Sign Up</button>
+      <!--<button class="nav-cta">Registreer</button>-->
 
       <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
         <span></span>
@@ -36,11 +36,11 @@
       <div class="nav-menu-inner">
         <ul class="nav-links-mobile">
           <li><a href="index.html">Home</a></li>
-          <li><a href="collection.html">Collection</a></li>
+          <li><a href="collection.html">Collectie</a></li>
           <li><a href="#pricing">Pricing</a></li>
           <li><a href="#docs">Docs</a></li>
         </ul>
-        <button class="nav-cta-mobile" id="buttonbar">Regristreer</button>
+        <!--<button class="nav-cta-mobile" id="buttonbar">Regristreer</button>-->
       </div>
     </div>
   </nav>
@@ -74,8 +74,9 @@
         
         <main class="hero">
           <!--<h1>hallow</h1>-->
-          <h1>Welkom bij {Naam}</h1>
-          <button class="collection-toggle"id="test">Regristeer</button>
+          <h1>Welkom bij Mattera</h1>
+          
+          <!--<button class="collection-toggle"id="test">Regristeer</button>-->
 
           <script>
             test.addEventListener("click", () => {
