--- a/html/register.html
+++ b/html/register.html
@@ -14,7 +14,7 @@
         <div class="nav-inner">
           <a href="#" class="nav-logo">
             <div class="nav-logo-badge">LG</div>
-            <span>NAAM</span>
+            <span style="text-decoration: none;">Mattera</span>
           </a>
 
           <ul class="nav-links">
