--- a/html/collection.html
+++ b/html/collection.html
@@ -14,7 +14,7 @@
     <div class="nav-inner">
       <a href="#" class="nav-logo">
         <div class="nav-logo-badge">LG</div>
-        <span>NAAM</span>
+        <span>Mattera</span>
       </a>
 
       <ul class="nav-links">
@@ -24,7 +24,15 @@
         <li><a href="#docs">About</a></li>
       </ul>
 
-      <button class="nav-cta">Sign Up</button>
+      <button class="nav-cart" id="cartBtn" aria-label="Open winkelmand">
+  🛒
+  <span class="cart-count" id="cartCount">0</span>
+</button>
+
+
+
+
+      <!--<button class="nav-cta">Sign Up</button>-->
 
       <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
         <span></span>
@@ -40,10 +48,32 @@
           <li><a href="#pricing">Pricing</a></li>
           <li><a href="#docs">Docs</a></li>
         </ul>
-        <button class="nav-cta-mobile" id="buttonbar">Regristreer</button>
+        <button class="nav-cart" id="cartBtn" aria-label="Open winkelmand">
+  🛒
+  <span class="cart-count" id="cartCount">0</span>
+</button>
+
+        <!--<button class="nav-cta-mobile" id="buttonbar">Regristreer</button>-->
       </div>
     </div>
   </nav>
+
+  <div class="cart-overlay" id="cartOverlay"></div>
+
+<aside class="cart-drawer" id="cartDrawer">
+  <div class="cart-header">
+    <h3>Winkelmand</h3>
+    <button id="closeCart">✕</button>
+  </div>
+
+  <ul id="cartItems"></ul>
+
+  <div class="cart-footer">
+    <p><strong>Totaal: €<span id="cartTotal">0.00</span></strong></p>
+    <button class="nav-cta">Afrekenen</button>
+  </div>
+</aside>
+
 
    <script>
     const navToggle = document.getElementById("navToggle");
@@ -92,6 +122,8 @@
   <a href="item4.html" class="card bg4">
     <span class="title">Item 4</span>
   </a>
+
+  
 </div>
 
         </main>
