--- a/html/collection.html
+++ b/html/collection.html
@@ -48,7 +48,7 @@
           <li><a href="#pricing">Pricing</a></li>
           <li><a href="#docs">Docs</a></li>
         </ul>
-        <button class="nav-cart" id="cartBtn" aria-label="Open winkelmand">
+        <button class="nav-cart-mobile" id="cartBtn" aria-label="Open winkelmand">
   🛒
   <span class="cart-count" id="cartCount">0</span>
 </button>
@@ -128,6 +128,6 @@
 
         </main>
     </main>
-    <script src="index.js"></script>
+    <script src="cart.js"></script>
   </body>
 </html>
