--- a/html/index.html
+++ b/html/index.html
@@ -23,6 +23,10 @@
         <li><a href="#pricing">Contact</a></li>
         <li><a href="#docs">About</a></li>
       </ul>
+      <button class="nav-cart" id="cartBtn" aria-label="Open winkelmand">
+  🛒
+  <span class="cart-count" id="cartCount">0</span>
+</button>
 
       <!--<button class="nav-cta">Registreer</button>-->
 
@@ -40,10 +44,31 @@
           <li><a href="#pricing">Pricing</a></li>
           <li><a href="#docs">Docs</a></li>
         </ul>
+
+        <button class="nav-cart-mobile" id="cartBtn" aria-label="Open winkelmand">
+  🛒
+  <span class="cart-count" id="cartCount">0</span>
+</button>
         <!--<button class="nav-cta-mobile" id="buttonbar">Regristreer</button>-->
       </div>
     </div>
   </nav>
+
+  <div class="cart-overlay" id="cartOverlay"></div>
+
+<aside class="cart-drawer" id="cartDrawer">
+  <div class="cart-header">
+    <h3>Winkelmand</h3>
+    <button id="closeCart">✕</button>
+  </div>
+
+  <ul id="cartItems"></ul>
+
+  <div class="cart-footer">
+    <p><strong>Totaal: €<span id="cartTotal">0.00</span></strong></p>
+    <button class="nav-cta">Afrekenen</button>
+  </div>
+</aside>
 
    <script>
     const navToggle = document.getElementById("navToggle");
@@ -101,6 +126,6 @@
           </script>
         </main>
     </main>
-    <script src="index.js"></script>
+    <script src="cart.js"></script>
   </body>
 </html>
