--- a/html/cart.html
+++ b/html/cart.html
@@ -73,27 +73,35 @@
 
     <!-- ================= HERO ================= -->
     <section
-      class="hero"
-      style="
-        min-height: calc(100vh - 80px);
-        width: 100%;
-        padding: 0 1.25rem;
-        background:
-          linear-gradient(rgba(0,0,0,0.55), rgba(0,0,0,0.55)),
-          url('/images/albert-stoynov-gUSN0c1Big8-unsplash.jpg');
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-      "
-    >
-      <h1>Welkom bij Mattera</h1>
-      <h2>3D Prints</h2>
+  class="hero cart-hero"
+  style="
+    min-height: calc(100vh - 80px);
+    width: 100%;
+    padding: 2rem 1.25rem;
+    background:
+      linear-gradient(rgba(0,0,0,0.55), rgba(0,0,0,0.55)),
+      url('/images/albert-stoynov-gUSN0c1Big8-unsplash.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  "
+>
+  <div class="cart-container">
+    <h1>🛒 Winkelwagen</h1>
 
-      <!-- ADD TO CART BUTTON -->
-      <button onclick="addToCart('3D Print', 9.99)">
-        Toevoegen aan winkelmand
-      </button>
-    </section>
+    <ul class="cart-list" id="cartItems"></ul>
+
+    <div class="cart-summary">
+      <span>Totaal</span>
+      <span>€ <span id="cartTotal">0.00</span></span>
+    </div>
+
+    <button class="checkout-btn">
+      Afrekenen
+    </button>
+  </div>
+</section>
+
 
     <!-- ================= SCRIPTS ================= -->
 
@@ -113,5 +121,7 @@
 
     <!-- Cart logic -->
     <script src="cart.js"></script>
+    <script src="cart-page.js"></script>
+
   </body>
 </html>
