--- a/html/item1.html
+++ b/html/item1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mattera</title>
+    <title>DrieDee</title>
 
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="./favicon.ico" type="image/x-icon" />
@@ -16,7 +16,7 @@
       <div class="nav-inner">
         <a href="#" class="nav-logo">
           <div class="nav-logo-badge">LG</div>
-          <span>Mattera</span>
+          <span>DrieDee</span>
         </a>
 
         <ul class="nav-links">
