--- a/html/index.html
+++ b/html/index.html
@@ -14,10 +14,11 @@
     <!-- ================= NAVBAR ================= -->
     <nav class="navbar">
       <div class="nav-inner">
-        <a href="#" class="nav-logo">
-          <div class="nav-logo-badge">LG</div>
-          <span>Mattera</span>
-        </a>
+        <a href="index.html" class="nav-logo">
+  <img src="/images/20260112_2139_Image Generation_remix_01kesyvrf8ef288bhjep12sm6c(2).png" alt="Mattera logo" class="nav-logo-img">
+  <span class="nav-logo-text">Mattera</span>
+</a>
+
 
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
