--- a/html/item1.html
+++ b/html/item1.html
@@ -16,7 +16,7 @@
       <div class="nav-inner">
         <a href="#" class="nav-logo">
           <div class="nav-logo-badge">LG</div>
-          <span>DrieDee</span>
+          <span></span>
         </a>
 
         <ul class="nav-links">
