--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
       <div class="nav-inner">
         <a href="index.html" class="nav-logo">
   <img src="/images/20260112_2139_Image Generation_remix_01kesyvrf8ef288bhjep12sm6c(2).png" alt="Mattera logo" class="nav-logo-img">
-  <span class="nav-logo-text">Mattera</span>
+  <span class="nav-logo-text"></span>
 </a>
 
 
