collection and hero index

--- a/html/collection.html
+++ b/html/collection.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Website</title>
+    <title>DrieDee</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
@@ -12,10 +12,10 @@
     <main>
       <nav class="navbar">
     <div class="nav-inner">
-      <a href="#" class="nav-logo">
-        <div class="nav-logo-badge">LG</div>
-        <span>Mattera</span>
-      </a>
+      <a href="index.html" class="nav-logo">
+  <img src="/images/20260112_2139_Image Generation_remix_01kesyvrf8ef288bhjep12sm6c(2).png" alt="Mattera logo" class="nav-logo-img">
+  <span class="nav-logo-text"></span>
+</a>
 
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
@@ -90,13 +90,13 @@
 
         <h1></h1>
         
-        <section class="hero" style="
+        <section class="hero hero2" style="
         min-height: calc(100vh - 80px);
         width: 100%;
         padding: 0 1.25rem;
         background:
           linear-gradient(rgba(0,0,0,0.55), rgba(0,0,0,0.55)),
-          url('/images/albert-stoynov-gUSN0c1Big8-unsplash.jpg');
+          /*url('/images/albert-stoynov-gUSN0c1Big8-unsplash.jpg');*/
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -106,7 +106,7 @@
 
           <div class="container">
   <a href="item1.html" class="card bg1">
-    <span class="title">Item 1</span>
+    <span class="title">3D Koppel</span>
   </a>
 
   <a href="item2.html" class="card bg2">
