--- a/html/index.html
+++ b/html/index.html
@@ -3,10 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mattera</title>
+    <title>DrieDee</title>
 
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
+    <link rel="icon" type="image/png" href="/images/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
+<link rel="shortcut icon" href="/images/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png" />
+<meta name="apple-mobile-web-app-title" content="DrieDee" />
+<link rel="manifest" href="/images/site.webmanifest" />
+
   </head>
 
   <body style="margin:0; min-height:100vh;">
@@ -74,20 +80,20 @@
 
     <!-- ================= HERO ================= -->
     <section
-      class="hero"
+      class="hero hero2"
       style="
         min-height: calc(100vh - 80px);
         width: 100%;
         padding: 0 1.25rem;
         background:
           linear-gradient(rgba(0,0,0,0.55), rgba(0,0,0,0.55)),
-          /*url('/images/albert-stoynov-gUSN0c1Big8-unsplash.jpg');*/
+          /* url('/images/albert-stoynov-gUSN0c1Big8-unsplash.jpg'); */
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
       "
     >
-      <h1>Welkom bij Mattera</h1>
+      <h1>Welkom bij DrieDee</h1>
       <h2>3D Prints</h2>
 
       <!-- ADD TO CART BUTTON -->
