--- a/html/item2.html
+++ b/html/item2.html
@@ -96,22 +96,20 @@
 
     <!-- PRODUCT INFO -->
     <div class="item-info">
-      <span class="item-badge">Decoratie</span>
+      <span class="item-badge">3D PRINT</span>
 
-      <h1 class="item-title">3D Koppel</h1>
+      <h1 class="item-title">Custom 3D Print</h1>
       <p class="item-desc">
-        Hoogwaardig, op maat gemaakt 3D-geprint object. Perfect voor decoratie,
-
-prototypes of cadeaus. Geprint met duurzame materialen en een strakke
-
-afwerking.
+        High-quality custom 3D printed object. Perfect for decoration,
+        prototypes, or gifts. Printed with durable materials and clean
+        finishes.
       </p>
 
       <div class="item-price">€9,99</div>
 
       <button
         class="item-cart-btn btn-wave"
-        onclick="addToCart('3D Koppel', 9.99)"
+        onclick="addToCart('3D Print', 9.99)"
       >
         🛒 Toevoegen aan winkelmand
       </button>
