--- a/html/cart.html
+++ b/html/cart.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mattera</title>
+    <title>DrieDee</title>
 
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="./favicon.ico" type="image/x-icon" />
@@ -14,10 +14,10 @@
     <!-- ================= NAVBAR ================= -->
     <nav class="navbar">
       <div class="nav-inner">
-        <a href="#" class="nav-logo">
-          <div class="nav-logo-badge">LG</div>
-          <span>Mattera</span>
-        </a>
+        <a href="index.html" class="nav-logo">
+  <img src="/images/20260112_2139_Image Generation_remix_01kesyvrf8ef288bhjep12sm6c(2).png" alt="Mattera logo" class="nav-logo-img">
+  <span class="nav-logo-text"></span>
+</a>
 
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
