--- a/html/register.html
+++ b/html/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>My Website</title>
+    <title>DrieDee</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="./favicon.ico" type="image/x-icon" />
   </head>
@@ -12,10 +12,10 @@
     <main>
       <nav class="navbar">
         <div class="nav-inner">
-          <a href="#" class="nav-logo">
-            <div class="nav-logo-badge">LG</div>
-            <span style="text-decoration: none;">Mattera</span>
-          </a>
+          <a href="index.html" class="nav-logo">
+  <img src="/images/20260112_2139_Image Generation_remix_01kesyvrf8ef288bhjep12sm6c(2).png" alt="Mattera logo" class="nav-logo-img">
+  <span class="nav-logo-text"></span>
+</a>
 
           <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
