--- a/html/cart.html
+++ b/html/cart.html
@@ -78,14 +78,14 @@
 
     <!-- ================= HERO ================= -->
     <section
-  class="hero cart-hero"
+  class="hero2 cart-hero"
   style="
     min-height: calc(100vh - 80px);
     width: 100%;
     padding: 2rem 1.25rem;
     background:
       linear-gradient(rgba(0,0,0,0.55), rgba(0,0,0,0.55)),
-      url('/images/albert-stoynov-gUSN0c1Big8-unsplash.jpg');
+      /*url('/images/albert-stoynov-gUSN0c1Big8-unsplash.jpg');*/
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
