--- a/html/collection.html
+++ b/html/collection.html
@@ -24,7 +24,7 @@
 
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
-        <li><a href="collection.html">Collection</a></li>
+        <li><a href="collection.html" class="active">Collection</a></li>
         <li><a href="#pricing">Contact</a></li>
         <li><a href="#docs">About</a></li>
       </ul>
