--- a/html/index.html
+++ b/html/index.html
@@ -88,7 +88,7 @@
           background-repeat: no-repeat;
         "
       >
-        <h1>Welkom bij DrieDee</h1>
+        <h1>Welkom bij DrieDee Studio</h1>
         <h2>3D Prints</h2>
       </section>
 
