--- a/html/index.html
+++ b/html/index.html
@@ -12,6 +12,10 @@
 <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png" />
 <meta name="apple-mobile-web-app-title" content="DrieDee" />
 <link rel="manifest" href="images/site.webmanifest" />
+<link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 
   </head>
 
@@ -26,7 +30,7 @@
 </a>
 
 
-        <ul class="nav-links">
+        <ul class="nav-links ">
           <li><a href="index.html">Home</a></li>
           <li><a href="collection.html">Collection</a></li>
           <li><a href="#pricing">Contact</a></li>
@@ -82,7 +86,7 @@
     <section
       class="hero hero2"
       style="
-        min-height: calc(100vh - 80px);
+    <!--min-height: calc(100vh - 80px);-->
         width: 100%;
         padding: 0 1.25rem;
         background:
@@ -93,8 +97,8 @@
         background-repeat: no-repeat;
       "
     >
-      <h1>Welkom bij DrieDee</h1>
-      <h2>3D Prints</h2>
+      <h1 class="">Welkom bij DrieDee</h1>
+      <h2 class="">3D Prints</h2>
 
       <!-- ADD TO CART BUTTON -->
       <!--<button onclick="addToCart('3D Print', 9.99)">
