--- a/html/collection.html
+++ b/html/collection.html
@@ -111,19 +111,39 @@
 
           <div class="container">
   <a href="item1.html" class="card bg1">
-    <span class="title">3D Koppel</span>
+    <span class="title">The Hug</span>
+    <span class="cost">€19.99</span>
+    <div class="color-options">
+      <span>One Color!</span>
+</div>
   </a>
 
   <a href="item2.html" class="card bg2">
-    <span class="title">Item 2</span>
+    <span class="title">Polka Dot</span>
+    <span class="cost">€7.99</span>
+    <div class="color-options">
+      <button class="color-dot" style="--clr:#F9F6EE" data-color="White" aria-label="White"></button>
+      <button class="color-dot" style="--clr:#a7917d" data-color="Black" aria-label="Black"></button>
+  
+  
+</div>
   </a>
 
   <a href="item3.html" class="card bg3">
     <span class="title">Item 3</span>
+    <span class="cost">€9.99</span>
   </a>
 
   <a href="item4.html" class="card bg4">
     <span class="title">Item 4</span>
+    <span class="cost">€9.99</span>
+    <div class="color-options">
+  <button class="color-dot active" style="--clr:#000000" data-color="Black" aria-label="Black"></button>
+  <button class="color-dot" style="--clr:#ffffff" data-color="White" aria-label="White"></button>
+  <button class="color-dot" style="--clr:#ef4444" data-color="Red" aria-label="Red"></button>
+  <button class="color-dot" style="--clr:#3b82f6" data-color="Blue" aria-label="Blue"></button>
+</div>
+
   </a>
 
   
