--- a/html/item3.html
+++ b/html/item3.html
@@ -87,10 +87,10 @@
 
   <div class="slider-track">
     <!-- ADD / REMOVE IMAGES HERE -->
-    <img src="images/Polka1.jpeg" alt="">
-    <img src="images/Polka2.jpeg" alt="">
-    <img src="images/Polka3.jpeg" alt="">
-    <img src="images/Polka4.jpeg" alt="">
+    <img src="images/WhatsApp Image 2026-01-07 at 16.56.28 (1).jpeg" alt="">
+    <img src="images/WhatsApp Image 2026-01-07 at 16.56.28 (0).jpeg" alt="">
+    <img src="images/WhatsApp Image 2026-01-07 at 16.56.28 (2).jpeg" alt="">
+    <img src="images/WhatsApp Image 2026-01-07 at 16.56.28 (3).jpeg" alt="">
 
   </div>
 
@@ -103,21 +103,16 @@
     <div class="item-info">
       <span class="item-badge">Decoratie</span>
 
-      <h1 class="item-title">“Polka Dot” – Een moderne twist op Pasen</h1>
+      <h1 class="item-title">3D Koppel</h1>
       <p class="item-desc">
-        Op zoek naar iets bijzonders in huis? Dit ei met fuzzy stipjes combineert een strakke vorm met een verrassende textuur. Een echte eyecatcher in huis. <br> <br>
+        Hoogwaardig, op maat gemaakt 3D-geprint object. Perfect voor decoratie,
 
-<strong>Specificaties :
-<br>
-•	Materiaal : Hoogwaardig PLA (biologisch afbreekbaar kunststof).
-<br>
-•	Afmetingen : 10 cm hoog
-<br>
-•	Kleur : verkrijgbaar in volgende kleuren: bone white en latte brown. </strong> 
+prototypes of cadeaus. Geprint met duurzame materialen en een strakke
 
+afwerking.
       </p>
 
-      <div class="item-price">€7,99</div>
+      <div class="item-price">€9,99</div>
 
       <div class="color-options">
         <button class="color-dot active" style="--clr:#F9F6EE" data-color="Bone White" data-hex="#F9F6EE" aria-label="Bone White"></button>
@@ -129,7 +124,7 @@
 
       <button
         class="item-cart-btn btn-wave"
-        onclick="addToCart('Polka Egg', 7.99, getcurrentcolor())"
+        onclick="addToCart('3D Koppel', 9.00, getcurrentcolor())"
       >
         🛒 Toevoegen aan winkelmand
       </button>
